Week3/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-backend
  template:
    metadata:
      labels:
        app: url-shortener-backend
    spec:
      containers:
      - name: backend
        image: darkverb77/backend:1.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"    
          limits:
            cpu: "500m"
