Week3/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-frontend
  template:
    metadata:
      labels:
        app: url-shortener-frontend
    spec:
      containers:
      - name: frontend
        image: darkverb77/frontend:1.1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"    
          limits:
            cpu: "500m"
