Week3/kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener-redis
  template:
    metadata:
      labels:
        app: url-shortener-redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: "100m"    
          limits:
            cpu: "500m"
