Week3/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-backend
spec:
  type: LoadBalancer      
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: url-shortener-backend
