Week3/kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-frontend
spec:
  type: LoadBalancer      
  # type: NodePort
  ports:
  - port: 80
    targetPort: 80
    # nodePort: 30000
  selector:
    app: url-shortener-frontend
