Week3/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: LoadBalancer      
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: url-shortener-redis
