Week3/kubernetes/url-shortener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  namespace: default  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: url-shortener-backend  
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-shortener-frontend 
            port:
              number: 80
